[gd_scene load_steps=12 format=2]

[ext_resource path="res://FemaleBody.gd" type="Script" id=1]
[ext_resource path="res://assets/body/male_body.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.7688
height = 32.3909

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.8823
height = 44.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.5, 23.4167 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 12.2703
height = 29.1875

[sub_resource type="CapsuleShape2D" id=7]
radius = 10.9508

[sub_resource type="CapsuleShape2D" id=8]
radius = 19.0
height = 224.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 19.3333
height = 220.0

[sub_resource type="CapsuleShape2D" id=10]
radius = 13.5602
height = 212.109

[sub_resource type="CapsuleShape2D" id=11]
radius = 13.56
height = 207.781

[node name="MaleBody" type="Node2D"]
position = Vector2( -124, 1 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 674, 278.667 )
scale = Vector2( 1.2961, 1.14543 )
texture = ExtResource( 2 )

[node name="LeftLungArea" type="Area2D" parent="."]
position = Vector2( 40, 146 )

[node name="LeftLungColisionShape" type="CollisionShape2D" parent="LeftLungArea"]
position = Vector2( 467.333, -5.33333 )
rotation = 0.242298
shape = SubResource( 1 )

[node name="RightLungArea" type="Area2D" parent="."]
position = Vector2( 40, 145 )

[node name="RightLungCollisionShape" type="CollisionShape2D" parent="RightLungArea"]
position = Vector2( 518, -3 )
rotation = 2.81423
shape = SubResource( 2 )

[node name="InstestinesArea" type="Area2D" parent="."]

[node name="IntestinesCollisionShape" type="CollisionShape2D" parent="InstestinesArea"]
position = Vector2( 528.5, 247.917 )
shape = SubResource( 3 )

[node name="LiverArea" type="Area2D" parent="."]

[node name="LiverCollisionShape" type="CollisionShape2D" parent="LiverArea"]
position = Vector2( 516, 184 )
rotation = 1.12269
shape = SubResource( 6 )

[node name="StomachArea" type="Area2D" parent="."]

[node name="StomachCollisionShape2D" type="CollisionShape2D" parent="StomachArea"]
position = Vector2( 545, 197 )
rotation = 0.672609
shape = SubResource( 7 )

[node name="SkinArea" type="Area2D" parent="."]

[node name="SkinCollisionShape2D" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 499, 440 )
shape = SubResource( 8 )

[node name="SkinCollisionShape2D2" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 560, 442 )
shape = SubResource( 9 )

[node name="SkinCollisionShape2D3" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 457.333, 221.333 )
rotation = 0.181346
shape = SubResource( 10 )

[node name="SkinCollisionShape2D4" type="CollisionShape2D" parent="SkinArea"]
position = Vector2( 603.333, 218.667 )
rotation = 6.13699
shape = SubResource( 11 )

[connection signal="input_event" from="LeftLungArea" to="." method="_on_LungArea_input_event"]
[connection signal="input_event" from="RightLungArea" to="." method="_on_LungArea_input_event"]
[connection signal="input_event" from="InstestinesArea" to="." method="_on_InstestinesArea_input_event"]
[connection signal="input_event" from="LiverArea" to="." method="_on_LiverArea_input_event"]
[connection signal="input_event" from="StomachArea" to="." method="_on_StomachArea_input_event"]
[connection signal="input_event" from="SkinArea" to="." method="_on_SkinArea_input_event"]
